@@ -219,6 +219,13 @@ avoid visiting certain parts of the tree.  (The object referred to by
 \var{names} must be modified in place, using \keyword{del} or slice
 assignment.)
 
+\begin{datadesc}{supports_unicode_filenames}
+True if arbitrary Unicode strings can be used as file names (within
+limitations imposed by the file system), and if os.listdir returns
+Unicode strings for a Unicode argument.
+\versionadded{2.3}
+\end{datadesc}
+
 \begin{notice}
 Symbolic links to directories are not treated as subdirectories, and
 that \function{walk()} therefore will not visit them. To visit linked
